--- a/.golangci.yml
+++ b/.golangci.yml
@@ -32,7 +32,7 @@ linters-settings:
   gofmt:
     simplify: true
   goimports:
-    local-prefixes: github.com/whyiyhw/go-workwx
+    local-prefixes: github.com/WannaTen/go-workwx
   misspell:
     locale: US
   nakedret:
